--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1715,8 +1715,10 @@ p.header-widget-phone {
 }
 
 #hero-1 {
-  background-image: url(../images/images-hero-1.jpg);
-  padding-top: 30px;
+  background-image: url(../images/banner.jpg);
+  background-size: 100%;
+  padding-top: 120px;
+  padding-bottom: 160px;
 }
 
 #hero-4 {
